<resources>
    <string name="app_name">Spammer</string>
    <string name="action_settings">Settings</string>
    <string name="app_name_label_text">Spammer App</string>
    <string name="title_activity_splash">Splash Activity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Dashboard</string>
    <string name="title_section2">History</string>
    <string name="title_section3">Purchase</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_refresh_connectivity">Check Connection Again</string>
    <string name="main_banner_ad_unit_id">ca-app-pub-6909068111618447/5679525813</string>
    <string name="hist_receiver_header">Sent To</string>
    <string name="hist_request_count_header">Count</string>
    <string name="hist_request_time_header">Time</string>
    <string name="no_history_text">No History Exists</string>
    <string name="action_delete">Delete</string>
    <string name="title_activity_history_detail">History Detail</string>
    <string name="sender_label">Sender:</string>
    <string name="sender_default">sender@example.com</string>
    <string name="receiver_default">receiver@example.com</string>
    <string name="receiver_label">Receiver:</string>
    <string name="subject_label">Subject:</string>
    <string name="subject_default">Sample Message Subject Text</string>
    <string name="body_label">Body:</string>
    <string name="body_default">Sample message body text. The sent message\'s body content would appear here.</string>
    <string name="request_count_label">Requested:</string>
    <string name="request_count_default">10,000</string>
    <string name="sent_count_label">Sent:</string>
    <string name="sent_count_default">10,000</string>
    <string name="request_time_label">Request Time:</string>
    <string name="request_time_default">9/27/15 4:55 PM</string>
    <string name="sent_time_default">9/27/15 4:57 PM</string>
    <string name="sent_time_label">Sent Time:</string>
    <string name="duration_label">Duration:</string>
    <string name="duration_default">2 minutes, 38 seconds</string>
    <string name="status_label">Status:</string>
    <string name="status_default">Completed Successfully</string>
    <string name="action_view_dtl">View Detail</string>
    <string name="spam_sent">Total Spam Sent</string>
    <string name="counter_default">0</string>
    <string name="title_activity_compose">Compose</string>
    <string name="send">Send</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="body">Body</string>
    <string name="quantity">Quantity</string>
    <string name="spammerBackgroundService">spammerBackgroundService</string>
    <string name="title_activity_full_screen_ad">FullScreenAdActivity</string>
    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <string name="adFree">Purchase Ad Free!!</string>
</resources>
