<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.spammerapp.spammer.HistoryDetailActivity">

    <TextView
        android:id="@+id/dtlSenderLabel"
        android:text="@string/sender_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/dtlSender"
        android:text="@string/sender_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/dtlSenderLabel"
        android:layout_toEndOf="@id/dtlSenderLabel"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/dtlReceiverLabel"
        android:text="@string/receiver_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/dtlSenderLabel"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/dtlReceiver"
        android:text="@string/receiver_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/dtlReceiverLabel"
        android:layout_toEndOf="@id/dtlReceiverLabel"
        android:layout_below="@id/dtlSender"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/dtlSubjectLabel"
        android:text="@string/subject_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_below="@id/dtlReceiverLabel"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/dtlSubject"
        android:text="@string/subject_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/dtlSubjectLabel"
        android:layout_toEndOf="@id/dtlSubjectLabel"
        android:layout_below="@id/dtlReceiver"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/dtlBodyLabel"
        android:text="@string/body_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/dtlSubjectLabel"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/dtlBody"
        android:text="@string/body_default"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minLines="4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/dtlBodyLabel"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/dtlReqCountLabel"
        android:text="@string/request_count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_below="@id/dtlBody"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/dtlReqCount"
        android:text="@string/request_count_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/dtlReqCountLabel"
        android:layout_toEndOf="@id/dtlReqCountLabel"
        android:layout_below="@id/dtlBody"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/dtlSentCountLabel"
        android:text="@string/sent_count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/dtlReqCountLabel"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/dtlSentCount"
        android:text="@string/sent_count_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/dtlSentCountLabel"
        android:layout_toEndOf="@id/dtlSentCountLabel"
        android:layout_below="@id/dtlReqCount"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/dtlReqTimeLabel"
        android:text="@string/request_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/dtlSentCountLabel"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/dtlReqTime"
        android:text="@string/request_time_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/dtlReqTimeLabel"
        android:layout_toEndOf="@id/dtlReqTimeLabel"
        android:layout_below="@id/dtlSentCount"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/dtlSentTimeLabel"
        android:text="@string/sent_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/dtlReqTimeLabel"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/dtlSentTime"
        android:text="@string/sent_time_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/dtlSentTimeLabel"
        android:layout_toEndOf="@id/dtlSentTimeLabel"
        android:layout_below="@id/dtlReqTime"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/dtlDurationLabel"
        android:text="@string/duration_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/dtlSentTimeLabel"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/dtlDuration"
        android:text="@string/duration_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/dtlDurationLabel"
        android:layout_toEndOf="@id/dtlDurationLabel"
        android:layout_below="@id/dtlSentTime"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/dtlStatusLabel"
        android:text="@string/status_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/dtlDuration"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/dtlStatus"
        android:text="@string/status_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/dtlStatusLabel"
        android:layout_toEndOf="@id/dtlStatusLabel"
        android:layout_below="@id/dtlDuration"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:textSize="20sp"/>

    <com.google.android.gms.ads.AdView
        android:id="@+id/histDtlAdView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-6909068111618447/5679525813"/>

</RelativeLayout>
