<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.spammerapp.spammer.ComposeActivity">

    <com.google.android.gms.ads.AdView
        android:id="@+id/compAdView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-6909068111618447/5679525813"/>

    <EditText
        android:id="@+id/compTo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/compAdView2"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/to"/>

    <EditText
        android:id="@+id/compSubject"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/compTo"
        android:ems="10"
        android:hint="@string/subject"/>

    <EditText
        android:id="@+id/compBody"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/compSubject"
        android:maxLines="@integer/eight"
        android:minLines="@integer/four"
        android:textAlignment="viewStart"
        android:gravity="start"
        android:ems="10"
        android:hint="@string/body"/>

    <TextView
        android:id="@+id/compCountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/compBody"
        android:text="@string/quantity"
        android:textSize="18sp"
        android:paddingTop="4dp"
        android:layout_centerHorizontal="true"/>

    <NumberPicker
        android:id="@+id/compCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/compCountLabel"
        android:layout_centerHorizontal="true"/>

    <com.google.android.gms.ads.AdView
        android:id="@+id/compAdView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-6909068111618447/5679525813"/>

</RelativeLayout>
