<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.spammerapp.spammer.HistoryFragment">

    <com.google.android.gms.ads.AdView
        android:id="@+id/histAdView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-6909068111618447/5679525813"/>


    <RelativeLayout
        android:id="@+id/histTableView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/histAdView2">

        <LinearLayout
            android:id="@+id/histHeaders"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/histReceiverHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:text="@string/hist_receiver_header"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center" />

            <TextView
                android:id="@+id/histCountRequestedHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".20"
                android:text="@string/hist_request_count_header"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center" />

            <TextView
                android:id="@+id/histRequestTimeHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".30"
                android:text="@string/hist_request_time_header"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center" />

        </LinearLayout>

        <ListView
            android:id="@+id/histList"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/histHeaders"
            android:clipToPadding="true"
            android:paddingBottom="60dp"
        />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/noHistView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <ImageView
            android:id="@+id/noHistIcon"
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/noHistText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/noHistIcon"
            android:textSize="25sp"
            android:text="@string/no_history_text"
            android:gravity="center"/>

    </RelativeLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/historyAdView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-6909068111618447/5679525813"/>
    
</RelativeLayout>
